# serializer version: 1
# name: test_custom_apply_filter_in_strategy[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= ?
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= %s
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= $1::INTEGER
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= %(sweetness_1)s::INTEGER
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= %(sweetness_1)s::INTEGER
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= ?
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= ?
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= %s
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= $1::INTEGER
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= %(sweetness_1)s::INTEGER
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= %(sweetness_1)s::INTEGER
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= ?
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
